[package]
name = "cuban"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bitflags = "2.8.0"
bytes = "1.10.0"
clap = { version = "4.5.28", features = ["derive", "cargo"] }
derive_more = { version = "2.0.1", features = ["from", "into"] }
itertools = "0.14.0"
memmap = "0.7.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.10.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winnow = "0.7.1"
